	- do not clear ut_user in utmpx logout records because
	  pututxline fails otherwise on solaris
	- Fix compilation on systems with bsd style utmp and no utmpx,
	  such as openbsd.

1.4  Wed Jun 29 14:36:19 CEST 2011
	- push stream modules in ptytty::get rather than in
	  ptytty::make_controlling_tty. This makes tty ioctls (such as
	  TIOCSWINSZ, to set the window size) work even if
	  make_controlling_tty has not been called.
	- clear user and host fields in utmp(x) logout records.
	- fix utmpx detection on upcoming FreeBSD 9.
	- switch to automake.
	- refactoring and cleanup.

1.3  Sun May  3 23:44:16 CEST 2009
	- fedora 9 apparently has isastream but not the stropts.h header
          file for it, work around this (reported by Tuncer Ayaz).
        - detect if lastlog is a directory at runtime.
        - assume ttyslot availability for bsd style utmp.
        - make sure the alignment for fd passing control messages
          is correct and work around some NetBSD issues (Taylor R Campbell).
        - add some missing include statements.

1.2  Thu Aug  2 15:50:02 CEST 2007
        - restore the SysV way of acquiring a controlling terminal
          (for systems having no TIOCSCTTY such as cygwin or solaris).
        - when using openpty, get the slave name with ttyname.
        - fix a small memory leak for _getpty.
        - update config.guess.

1.1  Mon Feb 12 18:25:07 CET 2007
        - when using the helper, close the pty and tty fd also in the main
          process (patch by Andrei Paskevich).
        - implement ptytty::sanitise_stdfd to ensure stdin/out/error exist
          and are usable and use it.

1.0  Tue Oct  3 13:18:00 CEST 2006
        - do not call chmod/chown with 0 argument when pty never opened.
        - reformatted ptytty.C to hopefully be more clear.

0.2  Thu Jul 20 04:57:26 CEST 2006
        - move include files outside #ifdef PTYTTY_HELPER in proxy.C.
        - added proxy.C to cvs (was missing before).
